# chats-creator

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: load_accounts.py  logging.py  telegram.py
src/opentele/: api.py  debug.py  devices.py  exception.py  utils.py
src/opentele/td/: account.py  auth.py  configs.py  mtp.py  storage.py  tdesktop.py
src/opentele/tl/: configs.py  telethon.py
