[project]
name = "chats-creator"
version = "0.1.0"
description = ""
authors = [
    {name = "TemaDrakoshef",email = "artem125149@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telethon (>=1.40.0,<2.0.0)",
    "betterlogging (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chats_creator", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true